--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,23 @@
 version: '3'
 services:
-  db:
-    image: mysql:latest
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: 98421234aQ!
-      MYSQL_DATABASE: codebook
+  client:
+    build: ./client
+    container_name: react-app
     ports:
-      - '3306:3306'
-  app:
-    build: .
-    restart: always
+      - '3000:3000'
+  server:
+    build: ./server
+    container_name: express-mysql
     ports:
       - '3001:3001'
     depends_on:
       - db
+  db:
+    image: mariadb
+    restart: always
     environment:
-      DB_HOST: db
-      DB_USER: root
-      DB_PASSWORD: 98421234aQ!
-      DB_NAME: codebook
+      MYSQL_ROOT_PASSWORD: 98421234aQ!
+    volumes:
+      - ./database:/var/lib/mysql
+    ports:
+      - '3306:3306'
