--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,13 @@
 FROM node:16
 
-# set working directory
 WORKDIR /app
 
-# install app dependencies
-COPY package.json .
+COPY package.json ./
 
 RUN npm install
 
-# copy app files
 COPY . .
 
-# expose port and start application
 EXPOSE 3001
-CMD ["npm", "start"]
+
+CMD [ "npm", "start" ]
